# z3rno-mcp

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: release.yml
claude-code-plugin/: plugin.json
src/z3rno_mcp/: __init__.py  server.py
tests/: test_server.py
